Refakturert tester (#325)
* Refakturert tester

* Fjernet ubrukt avhengighet

* Disablet plain-JAR

* Liten refakturering for å øke testbarhet samt lagt til tester.

* Bruker nå constructor-injection i tester.

* org.gradle.caching=true

* Endret koderekkefølge i RepositoryTestBase

* Refakturert bort !! hvor mulig. Flyttet db-testrelaterte ting til pakken 'database'. DbTestData heter nå TestDatabaseService og er nå en service.

* Fjernet overflødige avhengigheter fra build.gradle.kts. Bruker nå io.mockk:mockk-jvm

* SingletonPostgresContainer.kt gir ingen merverdi i testene, fjerner derfor denne

* Expression body hvor mulig

* Fjernet spring-boot-testcontainers. Rullet tilbake opprettelse av KafkaContainer. Bruker nå samme opprettelse av PostgreSQL testcontainer som i main.