@@ -28,8 +28,20 @@ val testcontainersVersion = "1.21.3"
 val mockkVersion = "1.14.4"
 val mockOauth2ServerVersion = "2.2.1"
 val ktlintVersion = "1.4.1"
+val springmockkVersion = "4.0.2"
 
 val commonVersion = "3.2024.10.25_13.44-9db48a0dbe67"
+
+dependencyManagement {
+    imports {
+        mavenBom("org.testcontainers:testcontainers-bom:$testcontainersVersion")
+    }
+
+    dependencies {
+        dependency("com.squareup.okhttp3:okhttp:$okHttpVersion")
+        dependency("com.squareup.okhttp3:mockwebserver:$okHttpVersion")
+    }
+}
 
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter")
@@ -48,8 +60,6 @@ dependencies {
         exclude("org.xerial.snappy", "snappy-java")
     }
 
-    implementation("org.jetbrains.kotlin:kotlin-reflect")
-    implementation("org.jetbrains.kotlin:kotlin-stdlib")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
 
     implementation("org.flywaydb:flyway-core")
@@ -57,18 +67,10 @@ dependencies {
     implementation("io.micrometer:micrometer-registry-prometheus")
     implementation("net.logstash.logback:logstash-logback-encoder:$logstashEncoderVersion")
 
-    implementation("no.nav.common:log:$commonVersion") {
-        exclude("com.squareup.okhttp3", "okhttp")
-    }
+    implementation("no.nav.common:log:$commonVersion")
     implementation("no.nav.common:token-client:$commonVersion")
-    implementation("no.nav.common:rest:$commonVersion") {
-        exclude("com.squareup.okhttp3", "okhttp")
-    }
-    implementation("no.nav.common:job:$commonVersion") {
-        exclude("com.squareup.okhttp3", "okhttp")
-    }
-
-    implementation("com.squareup.okhttp3:okhttp:$okHttpVersion")
+    implementation("no.nav.common:rest:$commonVersion")
+    implementation("no.nav.common:job:$commonVersion")
 
     implementation("io.arrow-kt:arrow-core:$arrowVersion")
     implementation("io.arrow-kt:arrow-fx-coroutines:$arrowVersion")
@@ -80,23 +82,35 @@ dependencies {
     }
     testImplementation("io.kotest:kotest-assertions-core-jvm:$kotestVersion")
     testImplementation("no.nav.security:token-validation-spring-test:$tokenSupportVersion")
-    testImplementation("org.testcontainers:testcontainers:$testcontainersVersion")
-    testImplementation("org.testcontainers:postgresql:$testcontainersVersion")
-    testImplementation("org.testcontainers:kafka:$testcontainersVersion")
-    testImplementation("org.awaitility:awaitility")
-    testImplementation("io.mockk:mockk:$mockkVersion")
+    testImplementation("org.testcontainers:postgresql")
+    testImplementation("org.testcontainers:kafka")
+    testImplementation("io.mockk:mockk-jvm:$mockkVersion")
     testImplementation("no.nav.security:mock-oauth2-server:$mockOauth2ServerVersion")
-    testImplementation("com.squareup.okhttp3:mockwebserver:$okHttpVersion")
-}
-
-tasks.test {
-    useJUnitPlatform()
+    testImplementation("com.ninja-squad:springmockk:$springmockkVersion")
 }
 
 kotlin {
     jvmToolchain(21)
+    compilerOptions {
+        freeCompilerArgs.addAll(
+            "-Xjsr305=strict",
+            "-Xannotation-default-target=param-property",
+        )
+    }
 }
 
-configure<org.jlleitschuh.gradle.ktlint.KtlintExtension> {
-    version.set(ktlintVersion)
+ktlint {
+    version = ktlintVersion
+}
+
+tasks.jar {
+    enabled = false
+}
+
+tasks.test {
+    useJUnitPlatform()
+    jvmArgs(
+        "-Xshare:off",
+        "-XX:+EnableDynamicAgentLoading",
+    )
 }
